--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -200,4 +200,4 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
       - name: Push Docker Image
-        run: docker push mserral/wordleapp:${{ env.VERSION }}
+        run: docker push mserral/wordleapp:${{ env.VERSION }}-${{ env.GIT_SHA }}
