--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>org.example</groupId>
     <artifactId>WordleApp</artifactId>
-    <version>0.1.4</version>
+    <version>0.2.0</version>
     <name>WordleApp</name>
     <description>WordleApp</description>
     <properties>
@@ -108,6 +108,7 @@
                 <configuration>
                     <excludes>
                         <exclude>com/wordleapp/WordleAppApplication</exclude>
+                        <excludedGroups>excluded</excludedGroups>
                     </excludes>
                 </configuration>
             </plugin>
