--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,17 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M7</version>
+                <configuration>
+                    <excludes>
+                        <exclude>**/WordleControllerTest.java</exclude>
+                        <exclude>**/WordleUITest.java</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.11</version>
@@ -108,9 +119,6 @@
                 <configuration>
                     <excludes>
                         <exclude>com/wordleapp/WordleAppApplication</exclude>
-                        <exclude>com/wordleapp/WordleControllerTest</exclude>
-                        <exclude>com/wordleapp/WordleUITest</exclude>
-                        <excludedGroups>excluded</excludedGroups>
                     </excludes>
                 </configuration>
             </plugin>
