--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
                 <version>3.0.0-M7</version>
                 <configuration>
                     <excludes>
-                        <exclude>**/WordleUITest.java</exclude>
+                        <!-- <exclude>**/WordleUITest.java</exclude> -->
                     </excludes>
                 </configuration>
             </plugin>
