--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,14 @@
     </parent>
     <groupId>org.example</groupId>
     <artifactId>WordleApp</artifactId>
-    <version>0.4.3</version>
+    <version>0.5.0</version>
     <name>WordleApp</name>
     <description>WordleApp</description>
     <properties>
         <java.version>17</java.version>
         <sonar.host.url>http://localhost:9000</sonar.host.url>
         <sonar.coverage.exclusions>**/WordleAppApplication.java,
-        **/PageController.java></sonar.coverage.exclusions>
+        **/PageController.java</sonar.coverage.exclusions>
         <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
     </properties>
     <dependencies>
@@ -92,6 +92,12 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M7</version>
                 <configuration>
+                    <excludes>
+                        <exclude>**/WordleControllerTest.java,
+                            **/GlobalExceptionHandlerTest.java,
+                            **/WordleAppApplicationTests.java,
+                            **/PageControllerTest.java</exclude>
+                    </excludes>
                     <parallel>classes</parallel>
                     <threadCount>3</threadCount>
                 </configuration>
