--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
     <properties>
         <java.version>17</java.version>
         <sonar.host.url>http://localhost:9000</sonar.host.url>
-        <sonar.coverage.exclusions>**/WordleAppApplication.java, **/PageController.java, **/WordSelectorService.java</sonar.coverage.exclusions>
+        <sonar.coverage.exclusions>**/WordleAppApplication.java, **/PageController.java, **/WordSelectorService.java,
+            **/DictionaryNormalizer.java, **/AvailableWord.java</sonar.coverage.exclusions>
         <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
     </properties>
     <dependencies>
