--- a/.github/workflows/test-tag.yaml
+++ b/.github/workflows/test-tag.yaml
@@ -11,12 +11,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Configure Git and push tag
-        env:
-          GH_TOKEN: ${{ secrets.GH_PAT }}
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}
+          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
           git fetch --tags
           git tag -a "v1.2.0" -m "Release version 1.2.0 - Dictionary-based validation and secret word refactor"
           git push origin "v1.2.0"
