--- a/.github/workflows/test-tag.yaml
+++ b/.github/workflows/test-tag.yaml
@@ -11,15 +11,18 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Configure Git and push tag
+        env:
+          AUTHED_REMOTE: https://x-access-token:${{ secrets.GH_PAT }}@github.com/M-Serral/WordleApp
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git remote remove origin
-          git remote add origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
+          git remote add origin "$AUTHED_REMOTE"
           git fetch --tags
           git tag -a "v1.2.0" -m "Release version 1.2.0 - Dictionary-based validation and secret word refactor"
           git push origin "v1.2.0"
-          
+      
+      
 
       - name: Read release notes
         id: release_notes
