--- a/.github/workflows/test-tag.yaml
+++ b/.github/workflows/test-tag.yaml
@@ -10,17 +10,32 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Configure Git and push tag
+      - name: Create and publish Git Tag via GitHub API
         env:
-          AUTHED_REMOTE: https://x-access-token:${{ secrets.GH_PAT }}@github.com/M-Serral/WordleApp
+          GH_TOKEN: ${{ secrets.GH_PAT }}
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git remote remove origin
-          git remote add origin "$AUTHED_REMOTE"
-          git fetch --tags
-          git tag -a "v1.2.0" -m "Release version 1.2.0 - Dictionary-based validation and secret word refactor"
-          git push origin "v1.2.0"
+
+          TAG_NAME="v1.2.0"
+          TAG_MESSAGE="Release version 1.2.0 - Dictionary-based validation and secret word refactor"
+          COMMIT_SHA=$(git rev-parse HEAD)
+
+          # Create local tag
+          git tag -a "$TAG_NAME" -m "$TAG_MESSAGE"
+
+          # Push tag to GitHub via API
+          curl -X POST \
+            -H "Authorization: token $GH_TOKEN" \
+            -H "Accept: application/vnd.github+json" \
+            https://api.github.com/repos/M-Serral/WordleApp/git/refs \
+            -d @- <<EOF
+          {
+            "ref": "refs/tags/$TAG_NAME",
+            "sha": "$COMMIT_SHA"
+          }
+          EOF
+      
       
       
 
