--- a/.github/workflows/test-tag.yaml
+++ b/.github/workflows/test-tag.yaml
@@ -35,17 +35,14 @@ jobs:
             "sha": "$COMMIT_SHA"
           }
           EOF
-      
-      
-      
 
       - name: Read release notes
         id: release_notes
         run: |
+          RELEASE_BODY="$(cat RELEASE_NOTES.md)"
           echo "RELEASE_BODY<<EOF" >> $GITHUB_ENV
-          cat RELEASE_NOTES.md >> $GITHUB_ENV
+          echo "$RELEASE_BODY" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
-
 
       - name: Create and publish GitHub Draft Release
         uses: softprops/action-gh-release@v2
