--- a/.github/workflows/test-tag.yaml
+++ b/.github/workflows/test-tag.yaml
@@ -10,6 +10,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+
+      - name: Get project version from pom.xml
+        run: |
+          VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+
       - name: Create and publish Git Tag via GitHub API
         env:
           GH_TOKEN: ${{ secrets.GH_PAT }}
@@ -17,8 +23,8 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
-          TAG_NAME="v1.2.0"
-          TAG_MESSAGE="Release version 1.2.0 - Dictionary-based validation and secret word refactor"
+          TAG_NAME="v${{ env.VERSION }}"
+          TAG_MESSAGE="Release version " ${{ env.VERSION }}
           COMMIT_SHA=$(git rev-parse HEAD)
 
           # Create local tag
@@ -44,16 +50,17 @@ jobs:
           echo "$RELEASE_BODY" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
 
-      - name: Create and publish GitHub Draft Release
+      - name: Create and publish GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: v${{ env.VERSION }}
           name: WordleApp v${{ env.VERSION }}
           body: ${{ env.RELEASE_BODY }}
-          draft: true
           files: |
             docker-compose.yml
             Dockerfile
+          prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+
 
