--- a/.github/workflows/test-tag.yaml
+++ b/.github/workflows/test-tag.yaml
@@ -23,7 +23,7 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
-          TAG_NAME="v${{ env.VERSION }}"
+          TAG_NAME="v"${{ env.VERSION }}
           TAG_MESSAGE="Release version " ${{ env.VERSION }}
           COMMIT_SHA=$(git rev-parse HEAD)
 
