--- a/.github/workflows/test-tag.yaml
+++ b/.github/workflows/test-tag.yaml
@@ -23,8 +23,8 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
-          TAG_NAME="v"${{ env.VERSION }}
-          TAG_MESSAGE="Release version " ${{ env.VERSION }}
+          TAG_NAME=v${{ env.VERSION }}
+          TAG_MESSAGE="Release version 1.2.0 - Dictionary-based validation and secret word refactor"
           COMMIT_SHA=$(git rev-parse HEAD)
 
           # Create local tag
