--- a/.github/workflows/test-tag.yaml
+++ b/.github/workflows/test-tag.yaml
@@ -17,30 +17,29 @@ jobs:
           echo "VERSION=$VERSION" >> $GITHUB_ENV
           
 
-      - name: Create and publish Git Tag via GitHub API
+      - name: Create and publish Git Tag via GitHub API with PR title
         env:
           GH_TOKEN: ${{ secrets.GH_PAT }}
+          VERSION: ${{ env.VERSION }}
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-
-          TAG_NAME=v${{ env.VERSION }}
-          TAG_MESSAGE=Release version ${{ env.VERSION }}
+      
+          TAG_NAME="v$VERSION"
           COMMIT_SHA=$(git rev-parse HEAD)
-          
+      
           # Get the latest merged PR title targeting master
           PR_TITLE=$(curl -s -H "Authorization: token $GH_TOKEN" \
-            "https://api.github.com/repos/${{ github.repository }}/pulls?state=closed&base=master&sort=updated&direction=desc" \
+            "https://api.github.com/repos/M-Serral/WordleApp/pulls?state=closed&base=master&sort=updated&direction=desc" \
             | jq -r '[.[] | select(.merged_at != null)][0].title')
-          
-          # Fallback if PR_TITLE is null
+      
           if [ -z "$PR_TITLE" ] || [ "$PR_TITLE" = "null" ]; then
-          PR_TITLE="Release $TAG_NAME"
+            PR_TITLE="Release $TAG_NAME"
           fi
-
+      
           # Create local tag
-          git tag -a "$TAG_NAME" -m "$TAG_MESSAGE"
-
+          git tag -a "$TAG_NAME" -m "$PR_TITLE"
+      
           # Push tag to GitHub via API
           curl -X POST \
             -H "Authorization: token $GH_TOKEN" \
@@ -52,6 +51,7 @@ jobs:
             "sha": "$COMMIT_SHA"
           }
           EOF
+
 
       - name: Read release notes
         id: release_notes
