--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,14 @@
     </parent>
     <groupId>org.example</groupId>
     <artifactId>WordleApp</artifactId>
-    <version>1.2.2</version>
+    <version>1.3.0</version>
     <name>WordleApp</name>
     <description>WordleApp</description>
     <properties>
         <java.version>17</java.version>
         <sonar.host.url>http://localhost:9000</sonar.host.url>
         <sonar.coverage.exclusions>**/WordleAppApplication.java, **/PageController.java, **/WordSelectorService.java,
-            **/DictionaryNormalizer.java, **/AvailableWord.java</sonar.coverage.exclusions>
+            **/DictionaryNormalizer.java, **/AvailableWord.java, **/Game.java</sonar.coverage.exclusions>
         <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
     </properties>
     <dependencies>
